--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;500;600&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300;400;500;600&display=swap");
+ */
+@import url("https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  /* font-family: "Hind Madurai", sans-serif; */
+  /* font-family: "Yanone Kaffeesatz", sans-serif; */
+  font-family: "Khand", sans-serif;
 }
