--- a/client/src/views/homePage/Home.module.css
+++ b/client/src/views/homePage/Home.module.css
@@ -1,5 +1,5 @@
 .containerHome {
   /* background-color: #0d0d0d; */
-  background-color: #0d0c14;
-  height: auto;
+  /* background-color: #0d0c14;
+  height: auto; */
 }
