--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,13 @@ body {
   /* font-family: "Yanone Kaffeesatz", sans-serif; */
   font-family: "Khand", sans-serif;
 }
+
+body::-webkit-scrollbar {
+  width: 7px;
+  background-color: #2c2c2c;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #9d00f1;
+  border-radius: 5px;
+}
