--- a/client/src/views/landingPage/Landing.module.css
+++ b/client/src/views/landingPage/Landing.module.css
@@ -1,7 +1,7 @@
 .container {
   width: auto;
   height: 100vh;
-  background-image: url("../../assets/Landing2.jpg");
+  background-image: url('../../assets/Landing2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -36,17 +36,20 @@
   /* letter-spacing: 15px; */
 }
 
-/* .linkHome {
+.linkHome {
   text-decoration: none;
   text-transform: uppercase;
   color: white;
   margin-top: 40px;
   font-size: 30px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .linkHome:hover {
   border: 1px solid rgba(255, 255, 255, 0.5);
-} */
+}
 
 .presentation {
   /* background-color: aquamarine; */
@@ -76,8 +79,6 @@
   width: 100%;
   height: 280px;
   margin-top: 50px;
-  margin-bottom: 60px;
+  margin-bottom: 90px;
   border: 1px solid rgba(255, 255, 255, 0.5);
 }
-
-
