--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,6 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #9d00f1;
+  background-color: #320DCD;
   border-radius: 5px;
 }
