--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,6 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #320DCD;
+  background-color: #bf9a56;
   border-radius: 5px;
 }
